WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77442
[Qt] PlatformTouchPoint does not set radius and force values
https://bugs.webkit.org/show_bug.cgi?id=77442
Summary
[Qt] PlatformTouchPoint does not set radius and force values
Allan Sandfeld Jensen
Reported
2012-01-31 08:49:47 PST
The constructor in PlatformTouchPointQt does not set all the values that are possible. We can not currently get a rotationAngle value from the Qt api, but radius and force is can be set from touch.rect and touch.pressure values. These values are currently only used by WebCore to pass on to Web application using the DOM Touch API.
Attachments
Patch
(2.64 KB, patch)
2012-01-31 08:54 PST
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2012-01-31 08:54:32 PST
Created
attachment 124748
[details]
Patch
WebKit Review Bot
Comment 2
2012-01-31 08:59:09 PST
Attachment 124748
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource First, rewinding head to replay your work on top of it... Applying: Fix compilation errors on build-webkit --debug --no-workers on mac. Using index info to reconstruct a base tree... Falling back to patching base and 3-way merge... Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging LayoutTests/platform/qt/Skipped CONFLICT (content): Merge conflict in LayoutTests/platform/qt/Skipped Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Fix compilation errors on build-webkit --debug --no-workers on mac. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 3
2012-02-01 09:39:14 PST
Comment on
attachment 124748
[details]
Patch Clearing flags on attachment: 124748 Committed
r106470
: <
http://trac.webkit.org/changeset/106470
>
WebKit Review Bot
Comment 4
2012-02-01 09:39:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug