[Qt] Set all PlatformTouchPoint values possible from a QTouch event. https://bugs.webkit.org/show_bug.cgi?id=77442

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-02-01
Reviewed by Kenneth Rohde Christiansen.

* platform/qt/PlatformTouchPointQt.cpp:
(WebCore::PlatformTouchPoint::PlatformTouchPoint):

Canonical link: https://commits.webkit.org/94424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106470 268f45cc-cd09-0410-ab3c-d52691b4dbfc